kubernetes/persistent-volume.yml
---
# Pod Manifest
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  nodeSelector:
    kubernetes.io/hostname: node-1
  containers:
    - name: demo-pod
      image: nginx:1.14.2
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
      volumeMounts:
        - name: pv-storage
          mountPath: "/data"

  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: demo-pvc # ALERT: Must match the PersistentVolumeClaim Name
---
